[package]
authors = ["jleahred <jleahred@gmail.com>"]
description = "Dynamic parser and replacer. You can define rules at run time. It's possible to use peg format"
edition = "2018"
homepage = "https://github.com/jleahred/dpr"
keywords = ["parsing", "parser", "dynamic", "peg", "compiler"]
license = "GPL-3.0"
name = "dpr"
readme = "README.md"
repository = "https://github.com/jleahred/dpr"
version = "1.0.0"

[dependencies]
#idata = {git = "https://github.com/jleahred/idata" }
idata = "0.1.2"
im = "14.3.0"
